--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,14 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,300;1,700&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,900;1,300;1,700&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" 
+     rel="stylesheet">
+     <style>
+      *{
+        font-family: 'Source Sans Pro', sans-serif;
+        margin: 0;
+      }
+     </style>
     <title>React Admin App</title>
   </head>
   
